contrast issue fix footer2

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,7 +27,7 @@ body {
   padding: 0;
   min-height: 100%;
   background: radial-gradient(circle at top left, rgba(102, 51, 153, 0.2), transparent 50%),
-    radial-gradient(circle at bottom right, rgba(235, 227, 227, 0.2), transparent 45%),
+    radial-gradient(circle at bottom right, rgba(177, 174, 152, 0.2), transparent 45%),
     var(--color-background);
   color: var(--color-text);
   overflow-x: hidden;
